# RDK_X5_Laser_Robot

./: README.md  README_cn.md
RDK_X5/install/: local_setup.sh  setup.sh
RDK_X5/install/yolov5_inference_node/lib/yolov5_inference_node/: inference_node
RDK_X5/install/yolov5_inference_node/share/yolov5_inference_node/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
RDK_X5/install/yolov5_inference_node/share/yolov5_inference_node/cmake/: yolov5_inference_nodeConfig.cmake
RDK_X5/install/yolov5_inference_node/share/yolov5_inference_node/launch/: weed_detection.launch.py
RDK_X5/src/yolov5_inference_node/: CMakeLists.txt
RDK_X5/src/yolov5_inference_node/launch/: weed_detection.launch.py
RDK_X5/src/yolov5_inference_node/src/: inference_node.cpp
STM32/: qianrushi_2026_5_10.ioc
STM32/Core/Inc/: main.h  stm32f4xx_it.h  tim.h  usart.h
STM32/Core/Src/: gpio.c  i2c.c  main.c  stm32f4xx_it.c  tim.c  usart.c
STM32/MDK-ARM/: qianrushi_2026_5_10.uvguix.26308  qianrushi_2026_5_10.uvguix.35879  qianrushi_2026_5_10.uvoptx  qianrushi_2026_5_10.uvprojx  startup_stm32f407xx.lst
STM32/MDK-ARM/RTE/_qianrushi_2026_5_10/: RTE_Components.h
STM32/MDK-ARM/qianrushi_2026_5_10/: emm_v5.crf  emm_v5.d  gpio.crf  gpio.d  i2c.crf  i2c.d  jy61p.crf  jy61p.d  main.crf  main.d  motor.crf  motor.d  oled.crf  oled.d  oled_data.crf  oled_data.d  pid.crf  pid.d  qianrushi_2026_5_10.axf  qianrushi_2026_5_10.build_log.htm  qianrushi_2026_5_10.hex  qianrushi_2026_5_10.htm  qianrushi_2026_5_10.lnp  qianrushi_2026_5_10.map  qianrushi_2026_5_10_qianrushi_2026_5_10.dep  startup_stm32f407xx.d  stm32f4xx_hal.crf  stm32f4xx_hal.d  stm32f4xx_hal_cortex.crf  stm32f4xx_hal_cortex.d  stm32f4xx_hal_dma.crf  stm32f4xx_hal_dma.d  stm32f4xx_hal_dma_ex.crf  stm32f4xx_hal_dma_ex.d  stm32f4xx_hal_exti.crf  stm32f4xx_hal_exti.d  stm32f4xx_hal_flash.crf  stm32f4xx_hal_flash.d  stm32f4xx_hal_flash_ex.crf  stm32f4xx_hal_flash_ex.d  (+32 more)
STM32/My_Libraries/: Emm_V5.c  Emm_V5.h  MOTOR.c  MOTOR.h  OLED.c  OLED.h  OLED_Data.c  OLED_Data.h  PID.c  PID.h  jy61p.c
