<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypesens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yolov5_inference_node</name>
  <version>0.0.1</version>
  <description>YOLOv5 inference node for RDK X5 using BPU</description>
  <maintainer email="sunrise@todo.com">sunrise</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>hobot_dnn</depend>  <!-- 可能不需要，但保留 -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
